--- a/PigGame.LittlePig/PigGame.LittlePig.csproj
+++ b/PigGame.LittlePig/PigGame.LittlePig.csproj
@@ -112,6 +112,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Die6.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout-land\activity_main.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\dimens.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
