large-land main.axml loads correctly

--- a/PigGame.LittlePig/PigGame.LittlePig.csproj
+++ b/PigGame.LittlePig/PigGame.LittlePig.csproj
@@ -137,7 +137,7 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout-large\MainActivity.axml">
+    <AndroidResource Include="Resources\layout-large-land\MainActivity.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
